--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "export": "next export"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "next": "12.0.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^1.2.0"
   },
   "devDependencies": {
     "eslint": "8.7.0",
