--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 3300",
+    "start": "next start",
     "lint": "next lint",
     "export": "next export"
   },
   "dependencies": {
     "axios": "^0.25.0",
+    "cors": "^2.8.5",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
