--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.25.0",
     "cors": "^2.8.5",
     "next": "12.0.8",
+    "nextjs-cors": "^2.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "swr": "^1.2.0"
